--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipes</title>
 </head>
 <body>
     <h1>
@@ -12,6 +12,23 @@
     </h1>
     <img src="lasagna.webp" alt="Lasagna">
 
-    
+    <h2>Description</h2>
+    <p>Lore ipsum dolor</p>
+
+    <p>Lorem ipsum dolor sit amet</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Tomatoes</li>
+        <li>Pasta</li>
+        <li>Love</li>
+        <li>Lasagna</li>
+    </ul>
+
+    <ol>
+        <li>Make pasta</li>
+        <li>Fail miserably</li>
+        <li>Cry in the corner</li>
+    </ol>
 </body>
 </html>
