Add new divs Change image direction

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,30 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        Lasagna
-    </h1>
-    <img src="lasagna.webp" alt="Lasagna">
+    <div class="container">
+        <div class="image">
+            <img src="lasagna.webp" alt="Lasagna">
+        </div>
+    </div>
 
-    <h2>Description</h2>
-    <p>Lore ipsum dolor</p>
+    <h1 class="title">Lasagna</h1>
+<div>
+  <p class="description">An extremely good dish that everyone will love</p>
+</div>
 
-    <p>Lorem ipsum dolor sit amet</p>
-
-    <h3>Ingredients</h3>
+<div class="ingredients">
+    <p class="ingredients-title">Ingredients</p>
     <ul>
         <li>Tomatoes</li>
         <li>Pasta</li>
         <li>Love</li>
         <li>Lasagna</li>
     </ul>
+</div>
 
+<div class="instructions">
+    <p class="instructions-title">Instructions</p>
     <ol>
         <li>Make pasta</li>
         <li>Fail miserably</li>
         <li>Cry in the corner</li>
     </ol>
+</div>
+
 </body>
 </html>
